# school2024-test-task1

./: .gitignore  CMakeLists.txt  Datetime.hpp  Doxyfile  JsonConverter.java  LocalDateTimeDeserializer.java  Main.java  Makefile  MyException.hpp  Order.java  OrderStatus.java  Purchase.java  README.md  ReportGenerator.java  Status.java  StatusDeserializer.java  Transaction.hpp  analize_task1.cpp  build-run.bat  build-run.sh  build.bat  build.gradle  build.sh  conanfile.txt  dependency-reduced-pom.xml  deserialize_transaction.cpp  format.json  input.json  input_file.cpp  main.py  main_task1.cpp  max_ordered_at.py  output_file.cpp  pom.xml  result.json  run.bat  run.sh  school2024-test-task1.sln  serialize_months.cpp  settings.gradle  (+5 more)
Croc.Domain/: Order.cs  Status.cs
Croc.Infrastructure/: Croc.Infrastructure.csproj  Program.cs
Croc.Infrastructure/Contracts/: JsonOrder.cs
Croc.Infrastructure/Extensions/: Mapping.cs  Options.cs
Croc.Infrastructure/Services/: ReportService.cs
Croc.Infrastructure/Services/Interfaces/: IReportService.cs
Exceptions/: EmptyOrderArrayException.java  InvalidOrderListException.java
System analytics/: System analytics.sln
System analytics/AnalyticsLargestExpenses/: AnalyticsLargestExpenses.csproj  JsonConverter.cs  PurchaseDto.cs  ReportGenerator.cs  ReportHandler.cs
System analytics/AnalyticsLargestExpenses/Interfaces/: IJsonConverter.cs  IReportGenerator.cs  IReportHandler.cs
System analytics/AnalyticsLargestExpenses/Models/: InputFileInfo.cs  PurchaseDto.cs  ReportResponse.cs  StatusType.cs
System analytics/Prototyping/: FileInfo.cs  Program.cs  Prototyping.csproj  Startup.cs  appsettings.Development.json  appsettings.Production.json
app/: build.gradle
app/src/main/resources/: format.json
croc_task_1/src/: Main.java
main/: solution.py
solution/: input.json  pom.xml
solution/data/: format.json
solution/src/: Client.java  DataAnalytics.java  Main.java
solution/src/main/java/vasilkov/: FileUtils.java  (+5 more)
solution/src/main/resources/: log4j2.xml  test.json
solution/src/test/java/: MainTest.java
solution/src/test/resources/: correct.json  wrong_json.json
src/: CMakeLists.txt  Main.java  Program.cs  School2024.sln  input.json  loader.py  pom.xml  report.py  strategies.py  task1.cpp  task1.hpp  task1_functions.cpp  test.cpp  test_app.cpp  utils.py
src/School2024.Application/: IDTO.cs  IDTOConverter.cs  IDTOsConverter.cs  IOrderAnalyzer.cs  IReportCreator.cs  School2024.Application.csproj
src/School2024.Domain/: Order.cs  OrderStatus.cs
src/School2024.Launch/: Program.cs  School2024.Launch.csproj  input.json  result.json  yest.json
src/School2024.Presentation/: Program.cs  result.json
src/School2024.ServicesForTestTask/: BasicReportCreator.cs  OrderAnalyzer.cs  ReportCreator.cs  ReportInJsonCreator.cs  School2024.ServicesForTestTask.csproj  WorkerDTOs.cs
src/School2024.ServicesForTestTask/DTOConverters/: DTOConverterOrder.cs
src/School2024.ServicesForTestTask/Models/: InputingFileFeatures.cs
src/School2024.ServicesForTestTask/Models/DTOs/: OrderDTO.cs
src/School2024.TestTask/: School2024.TestTask.csproj  TestTaskWorker.cs
src/School2024.Tests/: School2024.Tests.csproj  TestTaskUnitTest.cs
src/lib/: CMakeLists.txt  order.cpp  order_analytics.cpp
src/lib/include/: order.hpp  order_analytics.hpp
src/main/java/: Application.java  Main.java  Order.java  OrderAnalytics.java  OrderEntity.java  OrderGenerator.java  Solution.java
src/main/java/application/: Main.java  Report.java  ReportGenerator.java
src/main/java/data/: Order.java  Status.java
src/main/java/dto/: OrderDTO.java  OrderStatus.java
src/main/java/util/: FileUtils.java  JsonUtils.java
src/main/java/utils/: LocalDateTimeDeserializer.java  Report.java  ReportGenerator.java
src/main/resources/: application.properties  format.json  logback.xml  output.json
src/test/java/: ParserTest.java
src/test/java/resources/: test_case1.json  test_case2.json
statisticsReportsMaker/: CMakeLists.txt  Report.cpp  Report.h  ReportsService.cpp  ReportsService.h  main.cpp
testTask/: Order.cs  OrderProcessor.cs  Program.cs
(+104 files in other folders)
